# gmtk

./: .hgeol  .hgignore  COPYING  ChangeLog  DEVELOPER_README.txt  Makefile  Makefile.am  Makefile.old  NEWS  README  README.md  README.txt  RELEASE  RefactorDiscussion.txt  TODO.txt  bootstrap.sh  buildhelp.sh  configure.ac  gmtkmake  refactor-2016-03-09.patch  refactor-2016-03-31.patch  version.sh
IEEEFloatingpoint/: Makefile  Makefile.am  Makefile.old  autogen.sh  configure.ac  ieeeFPsetup_ANY_ANY.cc  ieeeFPsetup_ANY_ANY.h  ieeeFPsetup_cygwin.cc  ieeeFPsetup_cygwin.h  ieeeFPsetup_ibm.cc  ieeeFPsetup_ibm.h  ieeeFPsetup_linux.cc  ieeeFPsetup_linux.h  ieeeFPsetup_osx.cc  ieeeFPsetup_osx.h  ieeeFPsetup_solaris.cc  ieeeFPsetup_solaris.h  ieeeFPsetup_x86_64_darwin10.8.0.cc  ieeeFPsetup_x86_64_darwin10.8.0.h  ieeeFPsetup_x86_64_linux-gnu.cc  ieeeFPsetup_x86_64_linux-gnu.h  ieeeTest.cc
deepMLP/: AsynchronousBatchSource.cc  AsynchronousBatchSource.h  BatchSource.h  DBN.cc  DBN.h  FileBackedMatrix.cc  FileBackedMatrix.h  Globals.h  Layer.h  MMapMatrix.cc  MMapMatrix.h  MNIST.h  Makefile.am  Matrix.cc  Matrix.h  MatrixFunc.cc  MatrixFunc.h  Random.cc  Random.h  StdioMatrix.cc  StdioMatrix.h  TrainSGD.h  blas_args  blas_check  boost_args  configure.ac  dmlp.cc  dmlpTest.cc  dummy.cc  flat2vit.c  label.cc  miniblas.cc  miniblas.h  mm_double_NN_1.c  mm_double_NN_1_general.c  mm_double_NN_1_l1.c  mm_double_NN_1_nofringe.c  mm_double_NN_c.c  mm_double_NN_c_general.c  mm_double_NN_c_l1.c  (+31 more)
deepMLP/m4/: gmtk_cxx11
featureFileIO/: GMTK_ARMAFilter.cc  GMTK_ARMAFilter.h  GMTK_ASCIIFile.cc  GMTK_ASCIIFile.h  GMTK_ASCIIStream.cc  GMTK_ASCIIStream.h  GMTK_AffineFilter.cc  GMTK_AffineFilter.h  GMTK_BaseSegmentSchedule.h  GMTK_BinStream.cc  GMTK_BinStream.h  GMTK_BinaryFile.cc  GMTK_BinaryFile.h  GMTK_CreateFileSource.cc  GMTK_CreateFileSource.h  GMTK_DataTransformations.cc  GMTK_FIRFilter.cc  GMTK_FIRFilter.h  GMTK_FileDescription.cc  GMTK_FileDescription.h  GMTK_FileSource.cc  GMTK_FileSource.h  GMTK_FileSourceNoCache.cc  GMTK_FileSourceNoCache.h  GMTK_FileSrcStream.h  GMTK_FileStream.h  GMTK_Filter.cc  GMTK_Filter.h  GMTK_FilterFile.h  GMTK_FilterStream.h  GMTK_FlatASCIIFile.cc  GMTK_FlatASCIIFile.h  GMTK_HDF5File.cc  GMTK_HDF5File.h  GMTK_HTKFile.cc  GMTK_HTKFile.h  GMTK_Kmeans.cc  GMTK_Kmeans.h  GMTK_LinearSchedule.h  GMTK_LinearSegmentSchedule.h  (+96 more)
man/: Makefile.am  configure.ac  gmtk.h2m
miscSupport/: Makefile  Makefile.am  Makefile.old  adaptive_filter.h  arguments.cc  arguments.h  autogen.sh  bin_search.cc  bp_range.cc  bp_range.h  cArray.cc  cArray.h  configure.ac  counted_ptr.h  debug.cc  debug.h  eig.c  eig.h  error.cc  error.h  fileParser.cc  fileParser.h  fixed_filter.h  foo.c  general.cc  general.h  hash_abstract.cc  hash_abstract.h  hash_abstract2.cc  hash_abstract2.h  hash_map_list.cc  hash_map_list.h  hash_mtable.h  hash_tree.cc  hash_tree.h  lineqsolve.cc  lineqsolve.h  lms_filter.cc  lms_filter.h  logp.cc  (+44 more)
mitk/: Makefile  Makefile.am  MixBiNormal.cc  MixBiNormal.h  MixBiNormal_chelp.c  MixBiNormal_chelp.h  README  bivariate_mi.cc  compute-entropy.cc  computeMI-data.cc  computeMI.cc  configure.ac  data-points.cc  data-points.h  generate-synthetic-data.cc  global-parameters.h  io.cc  kmeans.cc  matrix-ops.cc  matrix-ops.h  mixNormal.cc  mixNormal.h  mixNormalCollection.cc  mixNormalCollection.h  multivariate_mi.cc  mvnrnd.cc  partition.cc  rangeSetCollection.cc  readRange.cc  readRange.h  run_multivariate_mi.sh  test-matrix-ops.cc  testNewRead.cc  testReadRange.cc  tests.cc  tests.h
mitk/discrete-mi/: Makefile  Makefile.am  config.h  configure.ac  data_processing.h  discrete-mi  discrete_mi.cc  mixNormal.cc  mixNormal.h  mixNormalCollection.cc  mixNormalCollection.h  rangeSetCollection.cc  readRange.cc  readRange.h  run_discrete_mi.sh  run_discrete_mi2.sh
mitk/doc/: Makefile  alg.sty  mi-toolkit-description.bbl  mi-toolkit-description.tex  mi-window.eps  mi-window.fig
mitk/examples/: TEST_TUPLE_FILE  TUPLE_FILE  f1  f2  list
tests/: Makefile.am  autoconf_tests  fdiffact1.lst  fdiffact1.ssv  fdiffact2.lst  fdiffact2.ssv  fdiffact3.lst  fdiffact3.ssv  genref.sh  gentests.sh  gmtk_test_and_dev_auroraTutorial.at  gmtk_test_and_dev_bat.at  gmtk_test_and_dev_crossword.at  gmtk_test_and_dev_franz.at  gmtk_test_and_dev_hui-lattice-align.at  gmtk_test_and_dev_kjaerulff.at  gmtk_test_and_dev_klivescu.at  gmtk_test_and_dev_medianus.at  gmtk_test_and_dev_muri_uw.at  gmtk_test_and_dev_phone_free_model.at  gmtk_test_and_dev_static_example.at  gmtk_test_and_dev_testLMs.at  gmtk_test_and_dev_thad_july.at  gmtk_test_and_dev_thad_june.at  gmtk_test_and_dev_toyFisher.at  gmtk_test_and_dev_water.at  gmtk_test_and_dev_wsj_decoder.at  gmtk_test_and_dev_xiaoyu.at  gmtk_test_and_dev_xwrd.n.at  gmtk_test_and_dev_xwrd_w_ve_pics.at  gmtk_test_debug.at  gmtk_test_newViterbi-1.at  gmtk_test_newViterbi-2.at  gmtk_test_newViterbi-3.at  gmtk_test_newViterbi-4.at  gmtk_test_padding.at  gmtk_test_ticket006.at  gmtk_test_ticket104.at  gmtk_test_ticket125.at  gmtk_test_ticket127.at  (+101 more)
tests/refactor_scripts/: refactor_2-stream.at  refactor_20090526.at  refactor_7-word.at  (+116 more)
tksrc/: GMTK_ArchipelagosSectionScheduler.cc  GMTK_ArchipelagosSectionScheduler.h  GMTK_Arguments.h  GMTK_BetaComponent.cc  GMTK_BetaComponent.h  GMTK_BinaryViterbiFileUtils.cc  GMTK_BinaryViterbiFileUtils.h  GMTK_BoundaryTriangulate.cc  GMTK_BoundaryTriangulate.h  GMTK_CFunctionDeterministicMappings.cc  GMTK_CFunctionDeterministicMappings.h  GMTK_CPT.cc  GMTK_CPT.h  GMTK_Clique.cc  GMTK_Clique.h  GMTK_CliqueChain.cc  GMTK_CliqueChain.h  GMTK_CliqueTablePruning.cc  GMTK_CliqueValueHolder.cc  GMTK_CliqueValueHolder.h  GMTK_Component.cc  GMTK_Component.h  GMTK_ConditionalSeparatorTable.cc  GMTK_ConditionalSeparatorTable.h  GMTK_Constants.h  GMTK_ContRV.cc  GMTK_ContRV.h  GMTK_ContinuousRandomVariable.cc  GMTK_ContinuousRandomVariable.h  GMTK_CountIterator.h  GMTK_DeepCPT.cc  GMTK_DeepCPT.h  GMTK_DeepNN.cc  GMTK_DeepNN.h  GMTK_DeepVECPT.cc  GMTK_DeepVECPT.h  GMTK_Dense1DPMF.cc  GMTK_Dense1DPMF.h  GMTK_DiagCovarVector.cc  GMTK_DiagCovarVector.h  (+274 more)
(+335 files in other folders)
